# goit-python-web-homework-04

./: .gitignore  Dockerfile  README.md  index.html  main.py  pyproject.toml  run_web.py
settings/: connection.json
webhw04/: __init__.py  error.html  main.py
webhw04/settings/: connection.json
webhw04/storage/: data.json
